tests/ctu/pass/direct-index.ct
var x = [25, 60, 75][2];
