tests/ctu/fail/array-ref.ct
var x = &[25, 60, 75];

var y = x[0];
var oob = +x[3];
